--- a/addressbook-selenium-tests/test-output/index.html
+++ b/addressbook-selenium-tests/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\gis\AppData\Local\Temp\testng-eclipse--1140251345\testng-customsuite.xml</span>
+                    <span>C:\Users\gis\AppData\Local\Temp\testng-eclipse-2114107497\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -166,7 +166,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\gis\AppData\Local\Temp\testng-eclipse--1140251345\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\gis\AppData\Local\Temp\testng-eclipse-2114107497\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -175,6 +175,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;com.example.tests.ContactData&quot;/&gt;
       &lt;class name=&quot;com.example.tests.TestBase&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupData&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupCreationTests&quot;/&gt;
@@ -192,7 +193,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (4 classes)</span>
+                <span class="test-name">Default test (5 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -222,20 +223,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testUntitled')
 data.setCell(0, 2, 'com.example.tests.ContactCreationTests')
-data.setCell(0, 3, 3224);
+data.setCell(0, 3, 8648);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testEmptyGroupCreation')
 data.setCell(1, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(1, 3, 2727);
+data.setCell(1, 3, 2255);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testNonEmptyGroupCreation')
 data.setCell(2, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(2, 3, 1937);
+data.setCell(2, 3, 1753);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -289,25 +290,25 @@ return data;
               <div class="chronological-class-name">com.example.tests.GroupCreationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testEmptyGroupCreation</span>
-                <span class="method-start">10168 ms</span>
+                <span class="method-start">14126 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyGroupCreation</span>
-                <span class="method-start">12897 ms</span>
+                <span class="method-start">16383 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.example.tests.ContactCreationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testUntitled</span>
-                <span class="method-start">14839 ms</span>
+                <span class="method-start">18140 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.example.tests.TestBase</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18065 ms</span>
+                <span class="method-start">26789 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
