--- a/addressbook-selenium-tests/test-output/old/Default suite/methods-alphabetical.html
+++ b/addressbook-selenium-tests/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ed297">  <td>15/12/20 21:20:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.TestBase@282ba1e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@532445947</td>   <td></td> </tr>
-<tr bgcolor="8ed297">  <td>15/12/20 21:21:00</td>   <td>18059</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.TestBase@282ba1e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@532445947</td>   <td></td> </tr>
-<tr bgcolor="689ebf">  <td>15/12/20 21:20:52</td>   <td>10162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@3ecf72fd]">testEmptyGroupCreation</td> 
-  <td>main@532445947</td>   <td></td> </tr>
-<tr bgcolor="689ebf">  <td>15/12/20 21:20:55</td>   <td>12891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@3ecf72fd]">testNonEmptyGroupCreation</td> 
-  <td>main@532445947</td>   <td></td> </tr>
-<tr bgcolor="a1d797">  <td>15/12/20 21:20:57</td>   <td>14833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testUntitled()[pri:0, instance:com.example.tests.ContactCreationTests@483bf400]">testUntitled</td> 
-  <td>main@532445947</td>   <td></td> </tr>
+<tr bgcolor="a16acf">  <td>15/12/20 22:09:48</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.example.tests.TestBase@13b6d03]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1170794006</td>   <td></td> </tr>
+<tr bgcolor="a16acf">  <td>15/12/20 22:10:14</td>   <td>26785</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.tests.TestBase@13b6d03]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1170794006</td>   <td></td> </tr>
+<tr bgcolor="a1d797">  <td>15/12/20 22:10:02</td>   <td>14122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@483bf400]">testEmptyGroupCreation</td> 
+  <td>main@1170794006</td>   <td></td> </tr>
+<tr bgcolor="a1d797">  <td>15/12/20 22:10:04</td>   <td>16379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupCreationTests.testNonEmptyGroupCreation()[pri:0, instance:com.example.tests.GroupCreationTests@483bf400]">testNonEmptyGroupCreation</td> 
+  <td>main@1170794006</td>   <td></td> </tr>
+<tr bgcolor="f7aae2">  <td>15/12/20 22:10:06</td>   <td>18136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactCreationTests.testUntitled()[pri:0, instance:com.example.tests.ContactCreationTests@21a06946]">testUntitled</td> 
+  <td>main@1170794006</td>   <td></td> </tr>
 </table>
